# embed-c

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: lib.rs  reconstruct.rs
src/: lib.rs
